Performance improvements